syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.diegosilva.grpc.hello";
option java_outer_classname = "GameProto";
option objc_class_prefix = "GM";

package game;

//Servico para autenticacao
service Autenticacao {
  rpc Autenticar (AutenticacaoRequest) returns (AutenticacaoResponse) {}
}

message AutenticacaoRequest {
  string usuario = 1;
}

message AutenticacaoResponse {
  string message = 1;
  int32 codigo = 2;
}

//Servico para usuarios
service Usuarios {
  rpc ListarUsuarios(Usuario) returns (stream Usuario) {}
  rpc Sair (SairRequest) returns (SairResponse) {}
}

message Usuario{
  string nome = 1;
  int32 op = 2;
}

message SairRequest{
  string nome = 1;
}
message SairResponse{}






